# Pomodoro-timer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  config.json  main.py  pyproject.toml
pomodoro/: __init__.py  app.py  cli.py  config.py  notes.py  session.py  sound.py  ui.py  utils.py
pomodoro/ui/: __init__.py  components.py  config_dialog.py  focus_dialog.py  main_window.py
tests/: test_config.py  test_session.py
